Update navigation-menu.mdx missing <NavigationMenu>
<NavigationMenu> was missing in the example, which was throwing an error while building in the Next.js app. It says NavigationMenuDemo, so I expected it to run directly when I pasted it in my code editor.

--- a/apps/v4/content/docs/components/navigation-menu.mdx
+++ b/apps/v4/content/docs/components/navigation-menu.mdx
@@ -87,11 +87,13 @@ import { Link } from "next/link"
 
 export function NavigationMenuDemo() {
   return (
-    <NavigationMenuItem>
-      <NavigationMenuLink asChild>
-        <Link href="/docs">Documentation</Link>
-      </NavigationMenuLink>
-    </NavigationMenuItem>
+    <NavigationMenu>
+      <NavigationMenuItem>
+        <NavigationMenuLink asChild>
+          <Link href="/docs">Documentation</Link>
+        </NavigationMenuLink>
+      </NavigationMenuItem>
+    </NavigationMenu>
   )
 }
 ```
